--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
