--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.86",
     "@types/react": "^18.2.61",
